core/testing/error_snapshots/runtime/index_out_of_bounds.snap
### TITLE ###
Index out of bounds
### INPUT ###
x = [1, 2, 3]
print(x[10])
### EXPECTED ###
error[RAD20029]: Index out of bounds: 10 (length 3)
  --> <script>:2:9
  |
1 | x = [1, 2, 3]
2 | print(x[10])
  |         ^^
  |
   = info: rad explain RAD20029

